--- a/src/scss/base/_app.scss
+++ b/src/scss/base/_app.scss
@@ -1,3 +1,9 @@
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
+}
+
 body {
 	display: flex;
 	flex-direction: column;
@@ -17,4 +23,24 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	overflow: hidden;
+}
+
+button {
+	font-family: inherit;
+	border: none;
+	background-color: $color-transparent;
+	cursor: pointer;
+}
+
+svg {
+	fill: none;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+img {
+	max-width: 100%;
 }
