--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -2,3 +2,12 @@
 
 @import "header";
 @import "footer";
+
+@import "section-hero";
+@import "section-steps";
+@import "section-product";
+@import "section-about";
+@import "section-rewards";
+@import "section-trust";
+@import "section-job";
+@import "section-contacts";
