--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,3 +1,7 @@
-$color-black: #0f0f0f;
+$color-black: #000;
 $color-white: #fff;
 $color-transparent: rgba(#fff, 0);
+
+$color-text: $color-black;
+$color-text-gray: #8F8F8F;
+$color-red: #FB2E13;
