--- a/src/pug/common-blocks/header.pug
+++ b/src/pug/common-blocks/header.pug
@@ -1,2 +1,19 @@
 mixin header()
 	header.header
+		.header__container.container
+			a.header__logo-link(href="#")
+				img.header__logo-img(src="images/logo.svg", alt)
+			nav.header__nav
+				ul.header__nav-list
+					li.header__nav-elem
+						a.header__nav-link(href="#") Наш продукт
+					li.header__nav-elem
+						a.header__nav-link(href="#") Нам доверяют
+					li.header__nav-elem
+						a.header__nav-link(href="#") Награды
+					li.header__nav-elem
+						a.header__nav-link(href="#") О нас
+					li.header__nav-elem
+						a.header__nav-link(href="#") Вакансии
+					li.header__nav-elem
+						a.header__nav-link(href="#") Контакты
