--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,1 +1,32 @@
-.button {}
+.button {
+	position: relative;
+	z-index: 0;
+	display: inline-block;
+	padding: 26px 30px;
+	border-radius: 16px;
+	font-size: 24px;
+	line-height: 1;
+	font-weight: 600;
+	color: $color-white;
+	white-space: nowrap;
+	overflow: hidden;
+
+	&::before {
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		width: 200%;
+		height: 100%;
+		background: linear-gradient(90deg, #0137FF 0%, #0137FF 50%, #02A9FF 100%);
+		content: "";
+		transform: translateX(-50%);
+		transition: transform $transition-default;
+	}
+
+	&:hover {
+		&::before {
+			transform: translateX(0);
+		}
+	}
+}
