--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,2 +1,41 @@
 .header {
+	padding-top: 24px;
+	padding-bottom: 24px;
+
+	@include desktop {
+		padding-top: 54px;
+		padding-bottom: 54px;
+	}
+
+	&__container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	&__logo-link {
+		display: inline-block;
+	}
+
+	&__logo-img {
+	}
+
+	&__nav-list {
+		display: flex;
+		margin: 0 -20px;
+	}
+
+	&__nav-elem {
+		padding: 0 20px;
+	}
+
+	&__nav-link {
+		font-size: 18px;
+		color: #0040FE;
+		transition: color $transition-default;
+
+		&:hover {
+			color: $color-red;
+		}
+	}
 }
