--- a/src/pug/common-blocks/header.pug
+++ b/src/pug/common-blocks/header.pug
@@ -6,14 +6,14 @@ mixin header()
 			nav.header__nav
 				ul.header__nav-list
 					li.header__nav-elem
-						a.header__nav-link(href="#") Наш продукт
+						a.header__nav-link(href="#product", data-scroll-to="product") Наш продукт
 					li.header__nav-elem
-						a.header__nav-link(href="#") Нам доверяют
+						a.header__nav-link(href="#trust", data-scroll-to="trust") Нам доверяют
 					li.header__nav-elem
-						a.header__nav-link(href="#") Награды
+						a.header__nav-link(href="#rewards", data-scroll-to="rewards") Награды
 					li.header__nav-elem
-						a.header__nav-link(href="#") О нас
+						a.header__nav-link(href="#about", data-scroll-to="about") О нас
 					li.header__nav-elem
-						a.header__nav-link(href="#") Вакансии
+						a.header__nav-link(href="#job", data-scroll-to="job") Вакансии
 					li.header__nav-elem
-						a.header__nav-link(href="#") Контакты
+						a.header__nav-link(href="#contacts", data-scroll-to="contacts") Контакты
