--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -2,9 +2,9 @@
 	position: relative;
 	z-index: 0;
 	display: inline-block;
-	padding: 26px 30px;
+	padding: 18px 24px;
 	border-radius: 16px;
-	font-size: 24px;
+	font-size: 18px;
 	line-height: 1;
 	font-weight: 600;
 	color: $color-white;
@@ -28,5 +28,17 @@
 		&::before {
 			transform: translateX(0);
 		}
+	}
+
+	@include tablet {
+		padding: 22px 25px;
+		border-radius: 12px;
+		font-size: 20px;
+	}
+
+	@include desktop {
+		padding: 26px 30px;
+		border-radius: 16px;
+		font-size: 24px;
 	}
 }
