--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -1,12 +1,12 @@
 .container {
 	width: 100%;
 	max-width: 1220px;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
 	margin-left: auto;
 	margin-right: auto;
 
-	@include tablet-desktop() {
+	@include desktop() {
 		padding-left: 30px;
 		padding-right: 30px;
 	}
