--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,14 +1,12 @@
 .heading1 {
-	margin-bottom: 16px;
 	font-size: 42px;
 	line-height: 40px;
 	font-weight: 800;
 	letter-spacing: -.03em;
 
 	@include tablet {
-		margin-bottom: 32px;
 		font-size: 56px;
-		line-height: 58px;
+		line-height: 64px;
 	}
 
 	@include desktop {
@@ -22,7 +20,7 @@
 	font-size: 38px;
 	line-height: 36px;
 	font-weight: 800;
-	letter-spacing: .03em;
+	letter-spacing: -.03em;
 
 	@include tablet {
 		margin-bottom: 32px;
@@ -34,9 +32,9 @@
 		margin-bottom: 32px;
 		font-size: 72px;
 		line-height: 76px;
+		letter-spacing: .03em;
 	}
 }
-
 
 .text-gray {
 	font-size: 16px;
@@ -50,22 +48,6 @@
 	}
 	@include desktop {
 		font-size: 24px;
-		line-height: 32px;
-	}
-}
-
-.text-gray2 {
-	font-size: 16px;
-	line-height: 22px;
-	font-weight: 500;
-	color: $color-text-gray;
-
-	@include tablet {
-		font-size: 22px;
-		line-height: 32px;
-	}
-	@include desktop {
-		font-size: 28px;
 		line-height: 32px;
 	}
 }
