--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,8 +1,8 @@
 .header {
-	padding-top: 24px;
-	padding-bottom: 24px;
+	padding-top: 34px;
+	padding-bottom: 11px;
 
-	@include desktop {
+	@include tablet-desktop {
 		padding-top: 54px;
 		padding-bottom: 54px;
 	}
@@ -14,10 +14,24 @@
 	}
 
 	&__logo-link {
+		flex-shrink: 0;
 		display: inline-block;
+		max-width: 220px;
+
+		@include tablet-desktop {
+			max-width: 100%;
+		}
 	}
 
 	&__logo-img {
+	}
+
+	&__nav {
+		display: none;
+
+		@include desktop {
+			display: block;
+		}
 	}
 
 	&__nav-list {
