--- a/src/scss/components/_section-about.scss
+++ b/src/scss/components/_section-about.scss
@@ -1,15 +1,23 @@
 .section-about {
-	padding-top: 86px;
-	padding-bottom: 96px;
+	padding-top: 20px;
+	padding-bottom: 60px;
+
+	@include tablet {
+		padding-top: 44px;
+		padding-bottom: 63px;
+	}
+
+	@include desktop {
+		padding-top: 86px;
+		padding-bottom: 96px;
+	}
 
 	&__grid {
 		display: grid;
-		grid-template: auto / repeat(2, 1fr);
 
 		@include tablet-desktop {
 			grid-template: auto / repeat(2, 1fr);
 		}
-
 
 		@include tablet {
 			grid-column-gap: 24px;
@@ -24,18 +32,28 @@
 	}
 
 	&__text-box {
-		margin-bottom: 86px;
+		margin-bottom: 28px;
+
+		@include desktop {
+			margin-bottom: 56px;
+		}
 	}
 
 	&__text-black {
+		margin-bottom: 24px;
 		font-size: 18px;
 		line-height: 22px;
 		font-weight: 800;
 		color: $color-text;
 
+		@include tablet-desktop {
+			margin-bottom: 0;
+		}
+
 		@include tablet {
+			margin-bottom: 30px;
 			font-size: 22px;
-			line-height: 32px;
+			line-height: 28px;
 		}
 
 		@include desktop {
@@ -46,7 +64,9 @@
 	}
 
 	&__text {
-		&:not(:last-child) {
+		margin-bottom: 22px;
+
+		@include tablet-desktop {
 			margin-bottom: 32px;
 		}
 	}
@@ -54,6 +74,15 @@
 
 	&__slider {
 		overflow: visible;
+		margin: 0 20px;
+
+		@include tablet {
+			margin: 0 24px;
+		}
+
+		@include desktop {
+			margin: 0;
+		}
 	}
 
 	&__slide {
@@ -66,10 +95,18 @@
 
 		.section-about__slide:nth-child(2n-1) & {
 			transform: rotate(-9deg) scale(1.12);
+
+			@include desktop {
+				transform: rotate(-9deg) scale(1.12);
+			}
 		}
 
 		.section-about__slide:nth-child(2n) & {
 			transform: rotate(9deg) scale(1.12);
+
+			@include desktop {
+				transform: rotate(9deg) scale(1.12);
+			}
 		}
 	}
 }
