--- a/src/scss/components/_section-hero.scss
+++ b/src/scss/components/_section-hero.scss
@@ -1,30 +1,77 @@
 .section-hero {
 	padding-top: 10px;
-	padding-bottom: 60px;
+	padding-bottom: 36px;
+
+	@include tablet {
+		padding-bottom: 40px;
+	}
+
+	@include desktop {
+		padding-bottom: 60px;
+	}
 
 	&__title-box {
-		display: flex;
-		margin-bottom: 16px;
+		margin-bottom: 30px;
+
+		@include tablet-desktop {
+			display: flex;
+		}
+
+		@include tablet {
+			margin-bottom: 34px;
+		}
+
+		@include desktop {
+			margin-bottom: 30px;
+		}
 	}
 
 	&__title {
+		margin-bottom: 16px;
+
+		@include tablet-desktop {
+			margin-bottom: 0;
+		}
 	}
 
 	&__logo-list {
 		flex-shrink: 0;
 		display: flex;
-		justify-content: flex-end;
+
+		@include tablet-desktop {
+			justify-content: flex-end;
+		}
 	}
 
 	&__logo {
 		display: block;
-		width: 118px;
-		height: 118px;
+		width: 74px;
+		height: 74px;
 		border-radius: 50%;
-		border: 6px solid $color-white;
+		border: 4px solid $color-white;
 
 		&:not(:last-child) {
-			margin-right: -38px;
+			margin-right: -25px;
+		}
+
+		@include tablet {
+			width: 100px;
+			height: 100px;
+			border-width: 5px;
+
+			&:not(:last-child) {
+				margin-right: -33px;
+			}
+		}
+
+		@include desktop {
+			width: 118px;
+			height: 118px;
+			border-width: 6px;
+
+			&:not(:last-child) {
+				margin-right: -38px;
+			}
 		}
 	}
 }
