--- a/src/scss/components/_section-product.scss
+++ b/src/scss/components/_section-product.scss
@@ -1,6 +1,16 @@
 .section-product {
-	padding-top: 64px;
-	padding-bottom: 60px;
+	padding-top: 33px;
+	padding-bottom: 20px;
+
+	@include tablet {
+		padding-top: 46px;
+		padding-bottom: 40px;
+	}
+
+	@include desktop {
+		padding-top: 64px;
+		padding-bottom: 60px;
+	}
 
 	&__title {
 		letter-spacing: -.03em;
@@ -28,7 +38,7 @@
 	&__grid {
 		display: grid;
 		grid-row-gap: 24px;
-		margin-bottom: 24px;
+		margin-bottom: 36px;
 
 		@include tablet-desktop {
 			grid-template: auto / repeat(2, 1fr);
@@ -57,13 +67,20 @@
 			margin-bottom: 24px;
 		}
 
-		@include tablet-desktop {
+		@include tablet {
+			&:not(:last-child) {
+				margin-bottom: 40px;
+			}
+		}
+
+		@include desktop {
 			grid-gap: 40px;
 
 			&:not(:last-child) {
 				margin-bottom: 40px;
 			}
 		}
+
 	}
 
 	&__marker {
@@ -110,7 +127,7 @@
 		margin-bottom: 24px;
 		text-align: center;
 
-		@include tablet-desktop{
+		@include tablet-desktop {
 			margin-bottom: 56px;
 		}
 	}
