--- a/src/scss/components/_section-steps.scss
+++ b/src/scss/components/_section-steps.scss
@@ -1,6 +1,16 @@
 .section-steps {
-	padding-top: 60px;
-	padding-bottom: 60px;
+	padding-top: 36px;
+	padding-bottom: 36px;
+
+	@include tablet {
+		padding-top: 40px;
+		padding-bottom: 40px;
+	}
+
+	@include desktop {
+		padding-top: 60px;
+		padding-bottom: 60px;
+	}
 
 	&__grid {
 		display: grid;
@@ -26,7 +36,7 @@
 
 	}
 
-	&__elem-img {
+	&__elem-img-box {
 		flex-shrink: 0;
 		display: block;
 		width: 60px;
@@ -38,6 +48,7 @@
 			margin-right: 0;
 			margin-bottom: 24px;
 		}
+
 		@include tablet {
 			width: 140px;
 			height: 140px;
@@ -49,6 +60,11 @@
 		}
 	}
 
+	&__elem-img {
+		width: 100%;
+		height: 100%;
+	}
+
 	&__elem-text-box {
 		flex-grow: 1;
 		display: flex;
@@ -57,6 +73,7 @@
 
 	&__elem-title {
 		font-size: 26px;
+		line-height: 32px;
 		font-weight: 800;
 		margin-bottom: 16px;
 		letter-spacing: .03em;
@@ -66,8 +83,8 @@
 		}
 
 		@include tablet {
+			min-height: 64px;
 			font-size: 32px;
-			line-height: 32px;
 		}
 
 		@include desktop {
@@ -78,19 +95,19 @@
 	}
 
 	&__elem-text {
-		font-size:16px;
-		line-height: 18px;
+		font-size: 16px;
+		line-height: 19px;
 		font-weight: 600;
 		color: $color-text-gray;
 
 
-		@include tablet{
+		@include tablet {
 			font-size: 24px;
-			line-height: 26px;
+			line-height: 28px;
 			font-weight: 500;
 		}
 
-		@include desktop{
+		@include desktop {
 			font-size: 28px;
 			line-height: 33px;
 			font-weight: 500;
